modify blog layout
- modify tag list view
- implement share function

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "hy-img": "1.0.0-hydejack.12",
     "hy-push-state": "1.0.0-pre.27",
     "intersection-observer": "^0.7.0",
+    "markdown-include": "^0.4.3",
     "regenerator-runtime": "^0.13.3",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.5.2",
