--- a/_config.yml
+++ b/_config.yml
@@ -61,14 +61,14 @@ menu:
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
-# legal:
-#   - title:             Impress
-#     url:               /impress/
-#   - title:             Cookies Policy
-#     url:               /cookies-policy/
+legal:
+   - title:             Impress
+     url:               /impress/
+   - title:             Cookies Policy
+     url:               /cookies-policy/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             ©Ryan 2019. All rights reserved.
+copyright:             ©2019 yoontae.ryan.kim All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
