write review of 'vue.js in action'

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ menu:
         url: /tag-kotlin/
       - title: Project
         url: /tag-project/
+      - title: Review
+        url: /tag-review/
   - title:             Thinking & Ideas
     url:               /tni/
   - title:             About
